--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	background-image: url("D:/Gym/resources/girl-3253532_1920.jpg");
+	background-image: url("https://github.com/Avinash1286/Gym/blob/master/resources/girl-3253532_1920.jpg");
 	background-repeat: no-repeat;
 font-family: 'Baloo Tamma 2', cursive;
 font-family: 'MuseoModerno', cursive;
